--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --coverage --verbose",
-    "watch": "jest --watchAll"
+    "watch": "jest --watchAll",
+    "lint": "eslint ./**/*.js --fix"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "eslint": "^6.6.0",
     "jest": "^24.1.0"
   }
 }
